[gd_scene load_steps=3 format=3 uid="uid://jkllub1rjw6b"]

[ext_resource type="Script" path="res://Custom_Door_Key_Inventory_Workspace/door.gd" id="1_evuxy"]
[ext_resource type="Script" path="res://Custom_Door_Key_Inventory_Workspace/inventory_display_control.gd" id="2_gfsp0"]

[node name="Door_Inventory_Items_Workspace" type="Node2D"]
script = ExtResource("1_evuxy")
locked = null

[node name="Door" type="Node2D" parent="."]

[node name="Sprite_Opened_Cavity" type="Sprite2D" parent="Door"]

[node name="Item_Node2D" type="Node2D" parent="Door"]

[node name="Sprite_Item" type="Sprite2D" parent="Door/Item_Node2D"]

[node name="Sprite_Locked_Door" type="Sprite2D" parent="Door"]

[node name="DoorArea_Area2d" type="Area2D" parent="Door"]

[node name="Inventory_Display_Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_gfsp0")
inventory_dict = null

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory_Display_Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Inventory_Display_Control/HBoxContainer"]
layout_mode = 2
